fixed various layout bugs

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -250,6 +250,7 @@ table.points > * > tr > td {
 
 .code-review .status-buttons {
   float: right;
+  padding-right: 0.3em;
 }
 
 #review-form {
